timeline backend logic. #59
